Cors refactoring (#1810)
* refactor(cors): minor

* refactor test

* add allow headers test

* refactor(cors): minor

* set origin fix

* refactor code

* refactor code

* refactor code

---------

Co-authored-by: Thomas Bayer <bayer@predic8.de>